# mimesis

./: CMakeLists.txt
src/: CMakeLists.txt  charset.cpp  mimesis.cpp  string_view.hpp
test/: CMakeLists.txt  load-save.cpp  parse-reproduce.cpp
